--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-scroll": "^1.8.1",
+    "styled-components": "^5.2.1",
     "typescript": "~4.0.5",
     "web-vitals": "^0.2.4"
   },
@@ -44,6 +46,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-scroll": "^1.8.2",
+    "@types/styled-components": "^5.1.7",
     "node-sass": "^4.14.1"
   }
 }
